# venera

./: .gitignore  README.md  build-profile.json5  oh-package.json5
.cursor/skills/HarmonyProject-API/: OVERRIDE.md  SKILL.md
.cursor/skills/HarmonyProject-build/: OVERRIDE.md  SKILL.md
.cursor/skills/Venera-upstream-port/: OVERRIDE.md  SKILL.md
AppScope/: app.json5
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  venera_archive.cpp  venera_archive.h  venera_convert.cpp  venera_convert.h  venera_http.cpp  venera_http.h  venera_qjs_runtime.cpp  venera_qjs_runtime.h
entry/src/main/ets/common/components/: ComicGridTile.ets  ComicListRow.ets  ComicTileStatusOverlay.ets  GlobalLoadingOverlay.ets  HomeSectionCard.ets  SecondaryPageHeader.ets  StartupSplash.ets
entry/src/main/ets/common/constants/: AppConstants.ets  StartupKeys.ets  UiDialogKeys.ets
entry/src/main/ets/common/layout/: SafeAreaInsets.ets  ShellInsets.ets
entry/src/main/ets/common/material/: MaterialEffectHelper.ets
entry/src/main/ets/common/models/: ComicModels.ets  FavoriteModels.ets  ImageFavoriteModels.ets
entry/src/main/ets/common/services/: AppBootstrap.ets  AppBootstrapLite.ets  AppDataService.ets  ComicSourceDataService.ets  ComicSourceService.ets  DownloadService.ets  FavoritesService.ets  FollowUpdatesService.ets  HistoryService.ets  HttpService.ets  ImageFavoriteService.ets  JsCookieStore.ets  JsEngineBridge.ets  JsHtmlDomService.ets  JsImageService.ets  JsMessageHost.ets  JsNativeRuntime.ets  JsUiBridge.ets  JsUiDialogService.ets  LocalComicService.ets  LocalFavoritesService.ets  NetworkFavoritesImportService.ets  TagTranslationService.ets  VeneraRdbService.ets  WebCookieBridge.ets  WebDavSyncService.ets
entry/src/main/ets/common/theme/: SysTheme.ets
entry/src/main/ets/common/utils/: ArchiveExtractUtil.ets  BlockedWordsUtil.ets  ComicImageResolver.ets  ComicTileStatusUtil.ets  ComicTypeUtil.ets  ComicUpdateUtil.ets  DocumentImportHelper.ets  EpubParseUtil.ets  ExploreDisplayUtil.ets  FileIoUtil.ets  ImageCacheUtil.ets  ImageFavoriteImageUtil.ets  JsConvertUtil.ets  LocalImageUtil.ets  PageJumpUtil.ets  ReaderLaunchUtil.ets  SearchUtil.ets  SemVerUtil.ets  SourceScriptUtil.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets  LaunchPage.ets
entry/src/main/ets/pages/categories/: CategoriesPage.ets  CategoryComicsPage.ets
entry/src/main/ets/pages/comic/: ComicCommentsPage.ets  ComicDetailPage.ets  ComicFavoritePanelPage.ets
entry/src/main/ets/pages/common/: JsInputDialogPage.ets  JsSelectDialogPage.ets
entry/src/main/ets/pages/download/: DownloadPage.ets
entry/src/main/ets/pages/explore/: ExplorePage.ets  ExplorePagesPickerPage.ets  ExploreRecommendPage.ets  SingleExplorePanel.ets
entry/src/main/ets/pages/favorites/: FavoritesPage.ets  NetworkFavoritesPanel.ets  NetworkFavoritesPickerPage.ets
entry/src/main/ets/pages/follow/: FollowUpdatesPage.ets
entry/src/main/ets/pages/history/: HistoryPage.ets
entry/src/main/ets/pages/home/: HomePage.ets
entry/src/main/ets/pages/image_favorites/: ImageFavoritesPage.ets  ImageFavoritesPhotoViewPage.ets
entry/src/main/ets/pages/local/: LocalComicDetailPage.ets  LocalLibraryPage.ets
entry/src/main/ets/pages/main/: MainShell.ets
entry/src/main/ets/pages/ranking/: RankingPage.ets
entry/src/main/ets/pages/reader/: EpubReaderPage.ets  PdfReaderPage.ets  ReaderPage.ets
entry/src/main/ets/pages/search/: AggregatedSearchPage.ets  SearchPage.ets  SearchResultPage.ets
entry/src/main/ets/pages/settings/: BlockingWordsPage.ets  CategoryPagesPickerPage.ets  ExploreSettingsPage.ets  SearchSourcesSettingsPage.ets  SettingsPage.ets
entry/src/main/ets/pages/sources/: ComicSourceEditPage.ets  ComicSourceListPage.ets  ComicSourcePage.ets  SourceLoginWebPage.ets  SourcePasswordLoginPage.ets
entry/src/main/resources/base/element/: color.json  string.json
scripts/: fetch-comic-sources.ps1  fetch-lzma.ps1  fetch-quickjs.ps1
(+2 files in other folders)
